WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251213
CacheStorageCache should only read record information instead of full record when possible
https://bugs.webkit.org/show_bug.cgi?id=251213
Summary
CacheStorageCache should only read record information instead of full record ...
Sihui Liu
Reported
2023-01-26 08:50:37 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-26 08:51:14 PST
<
rdar://problem/104696982
>
Sihui Liu
Comment 2
2023-01-26 09:06:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9180
EWS
Comment 3
2023-01-26 19:51:03 PST
Committed
259463@main
(e336cd312522): <
https://commits.webkit.org/259463@main
> Reviewed commits have been landed. Closing PR #9180 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug