CacheStorageCache should only read record information instead of full record when possible https://bugs.webkit.org/show_bug.cgi?id=251213 rdar://104696982

Reviewed by Youenn Fablet.

Reading a full record, which might include reading record body from disk, decoding record body and computing body hash,
can be more expensive than reading just record information, so we should avoid it if not necessary.

* Source/WebKit/NetworkProcess/storage/CacheStorageCache.cpp:
(WebKit::CacheStorageCache::getSize):
(WebKit::CacheStorageCache::open):
* Source/WebKit/NetworkProcess/storage/CacheStorageDiskStore.cpp:
(WebKit::readRecordInfoFromFileData):
(WebKit::CacheStorageDiskStore::readRecordFromFileData):
(WebKit::CacheStorageDiskStore::readAllRecordInfos):
(WebKit::CacheStorageDiskStore::readAllRecords): Deleted.
* Source/WebKit/NetworkProcess/storage/CacheStorageDiskStore.h:
* Source/WebKit/NetworkProcess/storage/CacheStorageMemoryStore.cpp:
(WebKit::CacheStorageMemoryStore::readAllRecordInfos):
(WebKit::CacheStorageMemoryStore::readAllRecords): Deleted.
* Source/WebKit/NetworkProcess/storage/CacheStorageMemoryStore.h:
* Source/WebKit/NetworkProcess/storage/CacheStorageStore.h:

Canonical link: https://commits.webkit.org/259463@main